--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.1.7",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "filepond": "^4.32.8",
+        "filepond-plugin-file-validate-size": "^2.2.8",
+        "filepond-plugin-file-validate-type": "^1.2.9",
+        "filepond-plugin-image-preview": "^4.6.12",
+        "filepond-plugin-image-resize": "^2.0.10",
+        "filepond-plugin-image-transform": "^3.8.7"
     }
 }
