--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "filepond-plugin-file-validate-type": "^1.2.9",
         "filepond-plugin-image-preview": "^4.6.12",
         "filepond-plugin-image-resize": "^2.0.10",
-        "filepond-plugin-image-transform": "^3.8.7"
+        "filepond-plugin-image-transform": "^3.8.7",
+        "quill": "^2.0.3"
     }
 }
